# enterprise-ai-ops-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  cost.py  deps.py  errors.py  guardrails.py  logging.py  main.py  metrics.py  observability.py  tracing.py
app/adapters/: __init__.py  base.py
app/api/: router.py  routes_auth.py  routes_health.py  routes_metrics.py  routes_requests.py  routes_system.py  routes_ui.py  schemas.py
app/db/: __init__.py  engine.py  models.py  repository.py
app/domain/: __init__.py  enums.py  state.py
app/graph/: __init__.py  build.py  context.py  nodes.py  retry.py
app/jobs/: __init__.py  queue.py  worker.py
app/security/: __init__.py  auth.py  jwt.py  rate_limit.py  ssrf.py
app/web/: index.html
docs/: BENCHMARKS.md  OBSERVABILITY.md  OPERATIONS.md  REAL-MODEL-EVAL.md  SECURITY.md  TROUBLESHOOTING.md  architecture.md
docs/adr/: 0001-record-architecture-decisions.md  0002-hexagonal-ports-and-adapters.md  0003-langgraph-orchestration.md  0004-async-job-processing-redis.md  0005-real-vs-sandbox-integrations.md  0006-security-authn-authz.md  0007-persistence-postgres-qdrant.md  0008-reliable-queue-and-observability.md  0009-evaluation-and-quality-gates.md  0010-sse-streaming-progress.md  0011-deterministic-sandbox-model.md  0012-compile-once-pipeline.md  0013-fail-fast-config.md  0014-structured-logging-correlation.md  0015-containerized-deployment.md  0016-cost-tracking.md  0017-idempotency-strategy.md  0018-output-guardrails.md  0019-observability.md  0020-honest-documentation.md  0021-ssrf-egress-guard.md
evals/: __init__.py  __main__.py  dataset.py  guardrails.py  harness.py  metrics.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_callback_url.py  0003_add_cost_tracking.py
ops/: prometheus.yml
scripts/: __init__.py  benchmark.py  create_token.py  idempotency_check.py  seed_knowledge.py
tests/: conftest.py
tests/integration/: test_api_requests.py  test_auth_flow.py  test_cost_tracking.py  test_eval_harness.py  test_graph_end_to_end.py  test_idempotency.py  test_ops_features.py  test_reliability.py  test_reply_guardrail.py  test_worker.py
tests/smoke/: test_real_llm.py
tests/unit/: fakes.py  test_action_nodes.py  (+17 more)
(+19 files in other folders)
